smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/apply/apply-missing-space.smithy
// Syntax error at line 5, column 10: Expected one or more whitespace characters, but found LBRACE('{')
$version: "2.0"
namespace smithy.example

apply Foo{ @sensitive }
